# vcf2parquet

./: .gitignore  Cargo.toml  LICENSE  Readme.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: main.yaml  pypublish.yml
implementors/clap/derive/: trait.ArgEnum.js  trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js  trait.ValueEnum.js
implementors/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/error/: trait.Error.js
python/: Cargo.toml
python/src/: error.rs  lib.rs
python/tests/: test_vcf2parquet.py
pyvcf2parquet/: all.html  enum.Compression.html  index.html  sidebar-items.js
search.desc/vcf2parquet/: vcf2parquet-desc-0-.js
src/: cli.rs  columndata.rs  error.rs  lib.rs  main.rs  name2data.rs  record2chunk.rs  schema.rs
src/pyvcf2parquet/: error.rs.html  lib.rs.html
src/vcf2parquet/: cli.rs.html  columndata.rs.html  error.rs.html  lib.rs.html  main.rs.html  name2data.rs.html  record2chunk.rs.html  schema.rs.html
src/vcf2parquet_bin/: cli.rs.html  error.rs.html  lib.rs.html  main.rs.html
src/vcf2parquet_lib/: error.rs.html  lib.rs.html  name2data.rs.html  record2chunk.rs.html  schema.rs.html
tests/: functional.rs
tests/data/: test.parquet  test.vcf  test_v1.parquet
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js  trait.ValueEnum.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/iter/traits/iterator/: trait.Iterator.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/pyo3/conversion/: trait.IntoPy.js
trait.impl/pyo3/impl_/extract_argument/: trait.PyFunctionArgument.js
trait.impl/pyo3/impl_/pyclass/: trait.PyClassImpl.js
trait.impl/pyo3/pyclass/: trait.PyClass.js
trait.impl/pyo3/type_object/: trait.PyTypeInfo.js
type.impl/core/result/: enum.Result.js
vcf2parquet/: all.html  fn.main.html  fn.noodles2arrow.html  fn.vcf2multiparquet.html  fn.vcf2parquet.html  index.html  sidebar-items.js
vcf2parquet-bin/: Cargo.toml
vcf2parquet-bin/src/: cli.rs  error.rs  lib.rs  main.rs
vcf2parquet-lib/: Cargo.toml
vcf2parquet-lib/src/: block.rs  error.rs  internal.rs  lib.rs  name2data.rs  record2chunk.rs  schema.rs  type_conversion.rs
vcf2parquet-py/: Cargo.toml  pyproject.toml
vcf2parquet-py/src/: lib.rs
vcf2parquet-py/tests/: test.vcf
vcf2parquet/cli/: enum.Compression.html  enum.ParquetVersion.html  enum.SubCommand.html  index.html  sidebar-items.js  struct.Command.html  struct.Convert.html  struct.Split.html
vcf2parquet/columndata/: enum.ColumnData.html  index.html  sidebar-items.js
vcf2parquet/error/: enum.Error.html  fn.mapping.html  index.html  type.Result.html
vcf2parquet/name2data/: enum.ColumnData.html  index.html  sidebar-items.js  struct.Name2Data.html
vcf2parquet/record2chunk/: index.html  sidebar-items.js  struct.Record2Chunk.html
vcf2parquet/schema/: fn.from_header.html  index.html  sidebar-items.js
vcf2parquet_bin/: all.html  fn.main.html  index.html  sidebar-items.js
vcf2parquet_bin/cli/: enum.Compression.html  enum.SubCommand.html  index.html  sidebar-items.js  struct.Command.html  struct.Convert.html  struct.Split.html
vcf2parquet_bin/error/: enum.Error.html  fn.mapping.html  index.html  sidebar-items.js  type.Result.html
vcf2parquet_lib/: all.html  fn.noodles2arrow.html  fn.vcf2multiparquet.html  fn.vcf2parquet.html  index.html  sidebar-items.js
vcf2parquet_lib/error/: enum.Error.html  fn.mapping.html  index.html  sidebar-items.js  type.Result.html
vcf2parquet_lib/name2data/: enum.ColumnData.html  index.html  sidebar-items.js  struct.Name2Data.html
vcf2parquet_lib/record2chunk/: index.html  sidebar-items.js  struct.Record2Chunk.html
vcf2parquet_lib/schema/: fn.from_header.html  index.html  sidebar-items.js
