[package]
name = "vcf2parquet"
description = "Convert a vcf in parquet"
version = "0.6.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"
rust-version = "1.74"

readme = "Readme.md"
license-file = "LICENSE"

keywords = ["bioinformatics", "parquet"]


[dependencies]
# parallel
rayon      = { version = "1" }

# input output management
niffler     = { version = "2" }
noodles     = { version = "0.64", features = ["vcf"] }
arrow       = { version = "51", default-features = false }
parquet     = { version = "51" }
rustc-hash  = { version = "1" }

# logging management
log         = { version = "0.4" }

# error management
thiserror       = { version = "1" }

# cli management
clap            = { version = "4", features = ["derive"] }


[dev-dependencies]
lazy_static     = { version = "1" }
tempfile        = { version = "3" }
assert_cmd      = { version = "2" }


[package.metadata.docs.rs]
all-features = true

[profile.release]
debug = true # uncomment for profiling
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false
