[package]
name = "vcf2parquet-py"
version = "0.6.0"
edition = "2021"

[lib]
name = "pyvcf2parquet"

crate-type = ["cdylib"]

[dependencies]
vcf2parquet-lib = { version = "0.6.0", path = "../vcf2parquet-lib" }
thiserror       = "1"
niffler         = { version = "2" }
arrow2          = { version = "0.17", features = ["io_parquet", "io_parquet_compression"] }
tempfile        = "3.10.0"
pyo3            = { version = "0.20", features = ["extension-module"] }
