[package]
name = "vcf2parquet-py"
version = "0.6.0"
edition = "2021"

[lib]
name = "pyvcf2parquet"

crate-type = ["cdylib"]

[dependencies]
vcf2parquet     = { version = "0.6", path = "../../vcf2parquet" }
thiserror       = { version = "1" }
niffler         = { version = "2" }
arrow           = { version = "51", default-features = false }
parquet         = { version = "51" }
tempfile        = { version = "3.10.0" }
pyo3            = { version = "0.20", features = ["extension-module"] }
