[package]
name = "vcf2parquet-bin"
version = "0.4.0"
edition = "2021"

[dependencies]
vcf2parquet-lib = { path = "../vcf2parquet-lib", version = "0.4.0" }
niffler         = { version = "2" }
arrow2          = { version = "0.17", features = ["io_parquet", "io_parquet_compression"] }

# logging management
simplelog       = { version = "0.12" }

# error management
thiserror       = { version = "1" }

# cli management
clap            = { version = "4", features = ["derive"] }
