[package]
name = "vcf2parquet-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# input output management
niffler     = { version = "2" }
noodles     = { version = "0.18", features = ["vcf"] }
#arrow2      = { version = "0.9", features = ["io_parquet", "io_parquet_compression"] }
arrow2      = { git = "https://github.com/jorgecarleitao/arrow2.git", features = ["io_parquet", "io_parquet_compression"] }
parquet2    = { version = "0.10" }

# logging and error management
log         = { version = "0.4" }
thiserror   = { version = "1" }