[package]
name = "vcf2parquet-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# input output management
niffler     = { version = "2" }
noodles     = { version = "0.21", features = ["vcf"] }
arrow2      = { version = "0.11", features = ["io_parquet", "io_parquet_compression"] }

# logging and error management
log         = { version = "0.4" }
thiserror   = { version = "1" }

[dev-dependencies]
lazy_static = { version = "1" }