[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "vcf2parquet"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    "pytest","pytest-cov"
]